# supplesearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
data/: documents.txt  documents_easy.txt  keywords.txt  keywords_easy.txt
src/apps/: CMakeLists.txt  supplesearch-kmeans.cpp  supplesearch.cpp
src/supplesearch/: CMakeLists.txt  clustering_engine.cpp  clustering_engine.hpp  database.cpp  database.hpp  document.cpp  document.hpp  engine.cpp  engine.hpp  measure.hpp  stemmer.hpp  tokenizer.hpp
src/supplesearch/algorithms/: bag_of_words.cpp  bag_of_words.hpp  covariance_matrix.cpp  covariance_matrix.hpp  inverse_document_frequency.cpp  inverse_document_frequency.hpp  kmeans.cpp  kmeans.hpp  lsi.cpp  lsi.hpp  term_frequency.cpp  term_frequency.hpp  tfidf.cpp  tfidf.hpp
src/supplesearch/databases/: text.cpp  text.hpp
src/supplesearch/measures/: cosine.cpp  cosine.hpp
src/supplesearch/stemmers/: dummy.cpp  dummy.hpp  porter.cpp  porter.hpp
src/supplesearch/tokenizers/: whitespace.cpp  whitespace.hpp
